--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <div style="text-align: left;"><br>
 <br>
 <div style="text-align: center;"><br>
-<a href="https://github.com/alex5250/CoronaVirusWidget/releases/download/v1.0.0/CoronaVirusWidget_Windows7SP1+.exe">Downland&nbsp; For Windows PC</a><br><br><br>
+<a href="https://github.com/alex5250/CoronaVirusWidget/releases/download/v1.0.0/CoronaVirusWidget_Windows7SP1+.exe">Download&nbsp; For Windows PC</a><br><br><br>
 <br>Only Windows 7 SP1 and later<br>
 Mozila is needed to make web parse<br>
 </div>
 <div style="text-align: left;"><span style="font-weight: bold;"></span><br>
 <br>
-<div style="text-align: center;"><a href="https://www.mozilla.org/en-GB/firefox/download/thanks/">Downland Mozilla Firefox Now</a><br>
+<div style="text-align: center;"><a href="https://www.mozilla.org/en-GB/firefox/download/thanks/">Download Mozilla Firefox Now</a><br>
 
 </div>
 <br>
