--- a/index.html
+++ b/index.html
@@ -1,214 +1,76 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-  
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-
-  
-  <link rel="shortcut icon" href="http://cdn.sstatic.net/stackoverflow/img/favicon.ico">
-
-  
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>CoronaVirus</title>
-
-  
-</head><body>
-<div style="text-align: center;">
-<h4><big>CornaVirus Widget for Windows PC<br>
-</big></h4>
-</div>
-
-<img style="width: 1200px; height: 801px;" alt="Windows PC Demo" src="img/2.jpg"><br>
-
-<div style="text-align: left;"><br>
-<br>
-<div style="text-align: center;"><br>
-<a href="https://github.com/alex5250/CoronaVirusWidget/releases/download/v1.0.0/CoronaVirusWidget_Windows7SP1+.exe">Download&nbsp; For Windows PC</a><br><br><br>
-<br>Only Windows 7 SP1 and later<br>
-Mozila is needed to make web parse<br>
-</div>
-<div style="text-align: left;"><span style="font-weight: bold;"></span><br>
-<br>
-<div style="text-align: center;"><a href="https://www.mozilla.org/en-GB/firefox/download/thanks/">Download Mozilla Firefox Now</a><br>
-
-</div>
-<br>
-<h3><br>
-</h3>
-<h2><br>
-</h2>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h3>Don`t forget say thank you for author just add start to my project
-github page. <br>
-</h3>
-
-
-<br>
-
-<h3>
-<ul>
-  <br>
-  <br>
-  <br>
-</ul>
-</h3>
-
-</body></html>
+<!doctype html>
+<html lang="en">
+   <head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+      <title>CoronaVirus Widget</title>
+   </head>
+   <body>
+      <div class="alert alert-danger" role="alert">
+         Project Deprecated. No any updates yet. You can made forks and developed it instad me.
+      </div>
+      <div style="text-align: center;">
+         <h4><big>CornaVirus Widget for Windows PC<br>
+            </big>
+         </h4>
+      </div>
+      <img style="width: 1200px; height: 801px;" class="img-fluid" alt="Windows PC Demo" src="https://raw.githubusercontent.com/alex5250/CoronaVirusWidget/master/img/2.jpg"><br>
+      <style>
+         .img-fluid {
+         display: block;
+         margin-left: auto;
+         margin-right: auto;
+         width: 50%;
+         }
+      </style>
+      <div style="text-align: left;">
+         <br>
+         <br>
+         <div style="text-align: center;"><br>
+            <a href="https://github.com/alex5250/CoronaVirusWidget/releases/download/v1.0.0/CoronaVirusWidget_Windows7SP1+.exe" class="btn btn-danger">Download&nbsp; For Windows PC
+            <img src="https://i.ya-webdesign.com/images/png-to-icon-windows-10-5.png" width="64" height="64">  
+            </a>
+            <br>
+            <br>Only Windows 7 SP1 and later<br>
+            Mozila is needed to make web parse<br>
+         </div>
+         <div style="text-align: left;">
+            <span style="font-weight: bold;"></span><br>
+            <br>
+            <script type="text/javascript">
+               function openInNewTab(url) {
+               var win = window.open(url, '_blank');
+               win.focus();
+               }
+            </script>
+            <div style="text-align: center;">
+               <a onclick="openInNewTab('https://www.mozilla.org/en-GB/firefox/download/thanks/');" class="btn btn-danger">Download Mozilla Firefox Now
+               <img src="https://icons.iconarchive.com/icons/xenatt/the-circle/512/App-Firefox-icon.png" width="64" height="64">    
+               </a>
+            </div>
+         </div>
+      </div>
+      <spacer> </spacer>
+      <spacer> </spacer>
+      <br></br>
+      <br></br>
+      <br></br>
+      <div class="jumbotron">
+         <p class="lead">This is app are made with Java.</p>
+         <hr class="my-4">
+         <p>JavaFX is a software platform for creating and delivering desktop applications, as well as rich Internet applications that can run across a wide variety of devices. JavaFX is intended to replace Swing as the standard GUI library for Java SE, but both will be included for the foreseeable future. </p>
+         <p>Gradle is an open-source build automation system that builds upon the concepts of Apache Ant and Apache Maven and introduces a Groovy-based domain-specific language instead of the XML form used by Maven for declaring the project configuration.[2] Gradle uses a directed acyclic graph to determine the order in which tasks can be run.
+            Gradle was designed for multi-project builds, which can grow to be quite large. It supports incremental builds by intelligently determining which parts of the build tree are up to date; any task dependent only on those parts does not need to be re-executed.
+         </p>
+         <p>Selenium is a portable framework for testing web applications. Selenium provides a playback tool for authoring functional tests without the need to learn a test scripting language (Selenium IDE). It also provides a test domain-specific language (Selenese) to write tests in a number of popular programming languages, including C#, Groovy, Java, Perl, PHP, Python, Ruby and Scala. The tests can then run against most modern web browsers. Selenium runs on Windows, Linux, and macOS. It is open-source software released under the Apache License 2.0. </p>
+      </div>
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   </body>
+</html>
