--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <title>CoronaVirus Widget</title>
    </head>
    <body>
-      <div class="alert alert-danger" role="alert">
-         Project Deprecated. No any updates yet. You can made forks and developed it instad me.
+      <div class="alert alert-success" role="alert">
+         Project updated and alive 
       </div>
       <div style="text-align: center;">
          <h4><big>CornaVirus Widget for Windows PC<br>
@@ -33,28 +33,14 @@
          <br>
          <br>
          <div style="text-align: center;"><br>
-            <a href="https://github.com/alex5250/CoronaVirusWidget/releases/download/v1.0.0/CoronaVirusWidget_Windows7SP1+.exe" class="btn btn-danger">Download&nbsp; For Windows PC
+            <a href="https://github.com/alex5250/CoronaVirusWidget/releases/download/V2.0.0/CoronaVirusWidgetV2.exe" class="btn btn-danger">Download&nbsp; For Windows PC
             <img src="https://i.ya-webdesign.com/images/png-to-icon-windows-10-5.png" width="64" height="64">  
             </a>
             <br>
             <br>Only Windows 7 SP1 and later<br>
-            Mozila is needed to make web parse<br>
+            
          </div>
-         <div style="text-align: left;">
-            <span style="font-weight: bold;"></span><br>
-            <br>
-            <script type="text/javascript">
-               function openInNewTab(url) {
-               var win = window.open(url, '_blank');
-               win.focus();
-               }
-            </script>
-            <div style="text-align: center;">
-               <a onclick="openInNewTab('https://www.mozilla.org/en-GB/firefox/download/thanks/');" class="btn btn-danger">Download Mozilla Firefox Now
-               <img src="https://icons.iconarchive.com/icons/xenatt/the-circle/512/App-Firefox-icon.png" width="64" height="64">    
-               </a>
-            </div>
-         </div>
+         
       </div>
       <spacer> </spacer>
       <spacer> </spacer>
