--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </big>
          </h4>
       </div>
-      <img style="width: 1200px; height: 801px;" class="img-fluid" alt="Windows PC Demo" src="https://raw.githubusercontent.com/alex5250/CoronaVirusWidget/master/img/2.jpg"><br>
+      <img style="width: 1200px; height: 801px;" class="img-fluid" alt="Windows PC Demo" src="https://github.com/alex5250/CoronaVirusWidget/blob/master/demo.png?raw=true"><br>
       <style>
          .img-fluid {
          display: block;
