--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </a>
             <br>
             <br>Only Windows 7 SP1 and later<br>
-            <br>Only 460KB needed </br>
-            <br>Also Net.Framework 4.6 needed</br>
+            <br>Only 460KB of space to run  needed </br>
+            <br>Also Net.Framework 4.6+ is needed</br>
             
          </div>
          
